--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body class="container" ng-controller="MainController">
     <nav>
-        <h1 class="text-center">HTTP To-Do List</h1>
+        <h1 class="text-center">HTTP To-Do List!</h1>
     </nav>
 
     <div class="well row">
